--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -43,7 +43,7 @@
                     {% else %}
                     <td>{{user_course.course.bilkent_equivalent.elective_group_name}}</td>
                     <td>{{user_course.course.bilkent_equivalent.course_credit}}</td>
-                    <td>{{user_course.course.bilkent_equivalent.course_code}}: {{user_course.course.bilkent_equivalent.course_name}}</td>
+                    <td></td>
                     {% endif %}
 
                     <td>
@@ -83,7 +83,7 @@
                     {% else %}
                     <td rowspan="2">{{courseKey.bilkent_equivalent.elective_group_name}}</td>
                     <td rowspan="2">{{courseKey.bilkent_equivalent.course_credit}}</td>
-                    <td rowspan="2">{{courseKey.bilkent_equivalent.course_code}}: {{courseKey.bilkent_equivalent.course_name}}</td>
+                    <td rowspan="2"></td>
                     {% endif %}
 
 
