--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -87,7 +87,7 @@
                     {% endif %}
 
 
-                    <td rowspan="2">
+                    <td rowspan="{{courseList|length}}">
                         {% if courseKey.approved %}
                         Approved
                         {% elif courseKey.is_rejected %}
