No forum post header bug fix

--- a/erasmus/src/erasmus/communication/templates/communication/detail-post.html
+++ b/erasmus/src/erasmus/communication/templates/communication/detail-post.html
@@ -8,8 +8,9 @@
 {% endblock %}
 
 {% block header_content %}
-
+ <div class="header" style="margin-bottom: 20px;">Post: {{post.topic}}</div>
 {% endblock %}
+
 {% block page_content %}
 <div class="page_content">
 
