Course list was set to hidden everytime, was not practical

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -146,7 +146,7 @@
         </div>
 
 
-        <div hidden="hidden" id="toggle-element-1">
+        <div id="toggle-element-1">
             <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for courses..">
             <div>
                 <table class="sortable" id="filtered_list" style="width:100%;">
