--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -87,7 +87,7 @@
                     {% endif %}
 
 
-                    <td rowspan="{{courseList|length}}">
+                    <td rowspan="2">
                         {% if courseKey.approved %}
                         Approved
                         {% elif courseKey.is_rejected %}
@@ -95,13 +95,13 @@
                         {% elif courseKey.submitted %}
                         Waiting for Approval
                         {% else %}
-                        <a class="button" style="display: flex"href="/submit-course/{{user_course.course.pk}}">Submit for Approval</a>
+                        <a class="button" style="display: flex"href="/submit-course/{{courseKey.pk}}">Submit for Approval</a>
                         {% endif %}
                     </td>
 
                     {% if not student.final_list_approved %}
                     <td rowspan="2">
-                        <a class="button" href="/remove-from-courses/{{user_course.course.pk}}">Remove</a>
+                        <a class="button" href="/remove-from-courses/{{courseKey.pk}}">Remove</a>
                     </td>
                     {% endif %}
                     {% endif %}
@@ -146,7 +146,7 @@
         </div>
 
 
-        <div id="toggle-element-1">
+        <div hidden="hidden" id="toggle-element-1">
             <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for courses..">
             <div>
                 <table class="sortable" id="filtered_list" style="width:100%;">
