--- a/erasmus/src/erasmus/communication/templates/communication/detail-post.html
+++ b/erasmus/src/erasmus/communication/templates/communication/detail-post.html
@@ -19,7 +19,7 @@
 
             <div class="bottom-forum" >
                 <div class="forum-title" style="border: solid 2px black">
-                      {% if response.user.student %}
+                      {% if post.user.student %}
                      <a href="../../profile/{{post.user.student.pk}}"><img src="../../static/user.png" alt="user" class="reply-user-photo"></a>
                       {%endif%}
 
