Reverted changes fixed

--- a/erasmus/src/erasmus/communication/templates/communication/detail-post.html
+++ b/erasmus/src/erasmus/communication/templates/communication/detail-post.html
@@ -9,7 +9,9 @@
 
 {% block header_content %}
 
+  <div class="header" style="margin-bottom: 20px;">Post: {{post.topic}}</div>
 {% endblock %}
+
 {% block page_content %}
 <div class="page_content">
 
